--- a/loginSystem/templates/loginSystem/login.html
+++ b/loginSystem/templates/loginSystem/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+t<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -239,55 +239,7 @@
 </div>
 
 <div class>
-    <div class="col-md-6 col-sm-12 hidden-md col-login col-login-left">
-        <div class="row panel-body my-30" style="padding-bottom: 0px;">
-            <div class="col-lg-6 col-md-12 panel-body">
-                <h2 class="text-transform-upr text-white my-30 text-bold">WEB HOSTING CONTROL PANEL
-                    </br />FOR EVERYONE
-
-                </h2>
-                <h4 class="text-white">Powered By OpenLiteSpeed/LiteSpeed Enterprise. Built For Speed, Security and
-                    Reliability.</h4>
-            </div>
-            <div class="col-lg-6 col-md-12 text-center panel-body">
-                <img class="" src="/static/images/cyberpanel-banner-graphics.png" alt="" width="96%">
-            </div>
-        </div>
-        <div class="row panel-body">
-            <div class="row panel-body">
-                <a class=" login-changelogs" href="https://go.cyberpanel.net/updates" target='_blank'>
-                    <div class="card mb-3" style="max-width: 540px;">
-                        <div class="row g-0">
-                            <div class="col-md-3">
-                                <img src="{% static 'baseTemplate/images/new-design-list-websites-square.png' %}" alt="..."
-                                     class="object-fit">
-                            </div>
-                            <div class="col-md-8 ml-5">
-                                <div class="card-body d-flex flex-column justify-content-around">
-                                    <h3 class="card-title mb-5 font-weight-bold">Change Logs</h3>
-                                    <p class="card-text mt-10">Stay up to date about new releases and features.</p>
-                                    <h4 class="card-learnmore">
-                      <span>
-                        Learn More
-                        <i>
-                          <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" aria-hidden="true"
-                               focusable="false" data-icon="external-link-alt" role="img" viewBox="0 0 512 512">
-                            <path fill="currentColor"
-                                  d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"/>
-                            </svg>
-                          </i>
-                      </span>
-                                    </h4>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <div ng-app="loginSystem" ng-controller="loginSystem" class="col-md-6 col-sm-12 col-login col-login-right" style="">
+    <div ng-app="loginSystem" ng-controller="loginSystem" class="col-md-6 col-sm-12 col-login col-login-center" style="">
         <div class="login-wrapper">
             <form id="loginForm" action="/" class="col-md-8 col-md-offset-2">
                 <h1 class="text-transform-upr text-center panel-body text-bold"
@@ -330,34 +282,6 @@
                     </span>
                                 </div>
                             </div>
-
-
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <select ng-model="languageSelection" ng-init="languageSelection='english'"
-                                            class="form-control">
-                                        <option value="english">English</option>
-                                        <option>Bangla</option>
-                                        <option>Bosnian</option>
-                                        <option>Bulgarian</option>
-                                        <option>Chinese</option>
-                                        <option>French</option>
-                                        <option>German</option>
-                                        <option>Greek</option>
-                                        <option>Italian</option>
-                                        <option>Indonesian</option>
-                                        <option>Japanese</option>
-                                        <option>Polish</option>
-                                        <option>Portuguese</option>
-                                        <option>Russian</option>
-                                        <option>Spanish</option>
-                                        <option>Turkish</option>
-                                        <option>Vietnamese</option>
-                                    </select>
-                                </div>
-                            </div>
-
-
                             <button type="button" style="background-color: #33CCCC;" ng-click="verifyLoginCredentials()"
                                     class="btn btn-success btn-block  btn-login">Sign In
                             </button>
